# intelligent-bag-based-on-ss928

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  test_all.py  命令.txt
.github/scripts/: validate_hardware_refresh.py
.github/workflows/: ci.yml
00_admin/: cleanup-report.md  integration-status.md  merge-manifest.md  project-log.md  sanda-upstream-import-manifest.json  work-progress-record.docx
01_requirements/: board-deployment-requirements.md  hardware-resource-requirements.md
02_research/: alternating-camera-experiment-log.md  alternating-dual-camera-analysis.md  bmi270-calibration-analysis.md  cloudbase-integration-status.md  complete-ss928-vision-status.md  dual-usb-camera-board-analysis.md  mr20-integration-status.md  pc-to-ss928-vision-parity-audit.md  sanda-upstream-refresh-analysis.md  ss928-mpp-and-model-deployment.md  ss928-npu-backend-status.md  ss928-om-backend-blockers.md  ss928-runtime-dependencies.md  ss928-source-inventory.md  third-party-notices.md  tm6605-tca9548a-validation.md
03_design/: ble-protocol.md  board-process-architecture.md  deployment-flow.md  event-protocol.md  vision-board-backend.md
04_hardware/: ss928-rev2-pin-map.md
04_hardware/ss928/: 40pin-usage.md  bmi270-wiring.md  dx-gp21-wiring.md  imx347-wiring.md  max98357-wiring.md  vibration-module-wiring.md
06_software/radar_visualizer/: README.md  radar_protocol.py  (+3 more)
06_software/vision_obstacle_tracker/ss928_backend/native/: CMakeLists.txt  README.md  build.ps1  build.sh  smartbag_ss928_acl.cpp  smartbag_ss928_acl.h
09_deliverables/: 报名项目简介.md
(+289 files in other folders)
